pdf entree en stock